debut formulaire remplissage planning

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "kyslik/column-sortable": "^5.8",
         "laravel/framework": "5.8.*",
         "laravel/nova": "*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "laravelcollective/html": "~5.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
